Fixed the issue that project list did not wrap properly

--- a/src/components/projectList/projectList.scss
+++ b/src/components/projectList/projectList.scss
@@ -2,5 +2,6 @@
   &-container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
   }
 }
